--- a/piww_website/templates/upload.html
+++ b/piww_website/templates/upload.html
@@ -58,7 +58,7 @@
     if (this.readyState == 4) {
       if (this.status == 200) {
         processing(0);
-        window.location.href = '/download/' + this.responseText + '/tmp.exe';
+        window.location.href = '/download/' + this.responseText + '/tmp.zip';
       }
     }
 
