add project hyperlink

--- a/piww_website/templates/upload.html
+++ b/piww_website/templates/upload.html
@@ -25,12 +25,23 @@
       font-family: 'Arial';
       color: #bbb;
       }
+
+      #footer {
+      text-align: center;
+      font-size: 12pt;
+      font-weight: bold;
+      font-family: 'Arial';
+      color: #bbb;
+      }
     </style>
   </head>
   <body>
 
     <div id="drop_zone">Drop python file here</div>
     <output id="debug"></output><br>
+    <div id="footer">
+      <a href='http://github.com/kbatten/pyinstaller-win-web'>piww</a>
+    </div>
 
     <script>
   $ = function(id) { return document.getElementById(id); };
