use shared static files for standalone or production mode

--- a/piww_website/templates/upload.html
+++ b/piww_website/templates/upload.html
@@ -11,7 +11,7 @@
       uploadUpdate only fires on "load" in firefox
   -->
   <head>
-    <script type="text/javascript" src="static/fastlz/compressor.js"></script>
+    <script type="text/javascript" src="/fastlz/compressor.js"></script>
     <style>
       #drop_zone {
       border: 2px dashed #bbb;
