--- a/piww_website/templates/upload.html
+++ b/piww_website/templates/upload.html
@@ -11,6 +11,9 @@
       uploadUpdate only fires on "load" in firefox
   -->
   <head>
+    <link href="/favicon.png" rel="shortcut icon" type="image/png"/>
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+
     <script type="text/javascript" src="/fastlz/compressor.js"></script>
     <style>
       #drop_zone {
