--- a/piww_website/templates/upload.html
+++ b/piww_website/templates/upload.html
@@ -12,6 +12,7 @@
   -->
   <head>
     <link href="/favicon.png" rel="shortcut icon" type="image/png"/>
+    <link href="/favicon32.png" rel="shortcut icon" type="image/png"/>
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
     <script type="text/javascript" src="/fastlz/compressor.js"></script>
